--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,21 @@
 
     <!-- Edit meta tags for SEO -->
     <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta name="title" content="Charlie Humbert | Writer and Media Archivist">
+    <meta name="description" content="Writer and Media Archivist">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta property="og:url" content="https://charliehumbert.com/">
+    <meta property="og:title" content="Charlie Humbert | Writer and Media Archivist">
     <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://developerfolio.js.org/">
-    <meta name="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
+    <meta name="twitter:url" content="https://charliehumbert.com">
+    <meta name="twitter:title" content="Charlie Humbert | Writer and Media Archivist">
     <meta name="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
     <!-- Link to a hosted image -->
     <!-- <meta name="twitter:image" content=""> -->
