--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>DeveloperFolio | Developer Portfolio Template</title>
+    <title>Charlie Humbert | Writer and Media Archivist</title>
     <meta name="title" content="Charlie Humbert | Writer and Media Archivist">
     <meta name="description" content="Writer and Media Archivist">
 
