--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- Edit meta tags for SEO -->
     <title>Charlie Humbert | Writer and Media Archivist</title>
     <meta name="title" content="Charlie Humbert | Writer and Media Archivist">
-    <meta name="description" content="Writer and Media Archivist">
+    <meta name="description" content="Charlie Humbert | Writer and Media Archivist">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
