--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://charliehumbert.com/">
     <meta property="og:title" content="Charlie Humbert | Writer and Media Archivist">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:description" content="Charlie Humbert | Writer and Media Archivist">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://charliehumbert.com">
     <meta name="twitter:title" content="Charlie Humbert | Writer and Media Archivist">
-    <meta name="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta name="twitter:description" content="Charlie Humbert | Writer and Media Archivist">
     <!-- Link to a hosted image -->
     <!-- <meta name="twitter:image" content=""> -->
 
